--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,39 +1,28 @@
+
 .card {
-    width: 220px;
-    padding: 30px;
-    border: 1px solid #f3f3f3;
-    border-radius: 40px;
-    margin-right: 30px;
-    transition: box-shadow 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-    margin-bottom: 30px;
-   
-    .plus {
-      cursor: pointer;
-      
-    }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px;
+  padding: 10px;
+  border: 1px solid #ffffff;
+  background:  #f2f6f3;
+  border-radius: 40px;
+  transition: box-shadow 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  margin: 10px 10px;
     &:hover {
-      box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
-      transform: translateY(-5px);
-    }
-  
-    .favorite {
-      position: absolute;
-      cursor: pointer;
-    }
-  
-    span {
-      font-size: 13px;
-      text-transform: uppercase;
-      opacity: 0.5;
-    }
-  
-    b {
-      font-size: 14px;
-    }
-  
-    h5 {
-      font-weight: 400;
-      font-size: 14px;
-    }
+    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
+    transform: translateY(-5px);
   }
+  span {
+    background:  #f2f6f3;;
+    padding: 5px;
+    
+  }
+  img {
+    border: 1px solid #f3f3f3;
+    background:  #f2f6f3;
+    border-radius: 40px;
+    padding: 0px;
+  }
+}
