--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -13,6 +13,7 @@
     &:hover {
     box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
     transform: translateY(-5px);
+    cursor: pointer;
   }
   span {
     background:  #f2f6f3;;
