--- a/src/components/Rank/Rank.module.scss
+++ b/src/components/Rank/Rank.module.scss
@@ -1,28 +1,35 @@
 
-.card {
+h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+li {
+  margin-bottom: 5px;
+  padding: 5px;
+font-size: 25px;
+font-weight:500;
+list-style: none;
+cursor: pointer;
+
+&:hover {
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
+  transform: translateY(-5px);
+}
+
+span {
+  padding: 0px;
+  padding-right:15px;
+  letter-spacing: 7px;
+}
+
+img {
+  padding: 0px 10px;
+  }
+
+div {
+  padding: 5px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  width: 180px;
-  padding: 10px;
-  border: 1px solid #ffffff;
-  background:  #f2f6f3;
-  border-radius: 40px;
-  transition: box-shadow 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  margin: 10px 10px;
-    &:hover {
-    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
-    transform: translateY(-5px);
-  }
-  span {
-    background:  #f2f6f3;;
-    padding: 5px;
-    
-  }
-  img {
-    border: 1px solid #f3f3f3;
-    background:  #f2f6f3;
-    border-radius: 40px;
-    padding: 0px;
   }
 }
