--- a/src/components/Rank/Rank.module.scss
+++ b/src/components/Rank/Rank.module.scss
@@ -7,10 +7,10 @@ h3 {
 li {
   margin-bottom: 5px;
   padding: 5px;
-font-size: 25px;
-font-weight:500;
-list-style: none;
-cursor: pointer;
+  font-size: 25px;
+  font-weight:500;
+  list-style: none;
+  cursor: pointer;
 
 &:hover {
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
@@ -19,8 +19,12 @@ cursor: pointer;
 
 span {
   padding: 0px;
-  padding-right:15px;
+  padding-right:5px;
   letter-spacing: 7px;
+}
+
+.rankNumber {
+  min-width: 36px;
 }
 
 img {
@@ -31,5 +35,5 @@ div {
   padding: 5px;
   display: flex;
   align-items: center;
-  }
+}  
 }
