--- a/src/components/Results/Results.module.scss
+++ b/src/components/Results/Results.module.scss
@@ -1,39 +1,56 @@
+.result {
+display: flex;
+flex-direction: column;
+align-items: center;
 
-h3 {
-  font-size: 30px;
-  font-weight: bold;
-}
-
-li {
-  margin-bottom: 5px;
-  padding: 5px;
-  font-size: 25px;
-  font-weight:500;
-  list-style: none;
-  cursor: pointer;
-
-&:hover {
-  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
-  transform: translateY(-5px);
-}
-
-span {
-  padding: 0px;
-  padding-right:5px;
-  letter-spacing: 7px;
-}
-
-.rankNumber {
-  min-width: 36px;
-}
-
-img {
-  padding: 0px 10px;
+  img {
+    border-radius: 30%;
   }
 
-div {
-  padding: 5px;
-  display: flex;
-  align-items: center;
-}  
+  span {
+    padding: 0px;
+    font-size: 17px;
+    font-weight: bold;
+  }
+  .tablo {
+    font-size: 25px;
+    font-weight: bolder;
+    color:red
+  }
+
 }
+
+
+
+
+// h3 {
+//   font-size: 30px;
+//   font-weight: bold;
+// }
+
+// li {
+//   margin-bottom: 5px;
+//   padding: 5px;
+//   font-size: 25px;
+//   font-weight:500;
+//   list-style: none;
+//   cursor: pointer;
+
+// &:hover {
+//   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
+//   transform: translateY(-5px);
+// }
+// }
+// span {
+//   padding: 0px;
+//   padding-right:5px;
+//   letter-spacing: 7px;
+// }
+
+// .rankNumber {
+//   min-width: 36px;
+// }
+
+// img {
+//   padding: 0px 10px;
+//   }
