--- a/src/App.scss
+++ b/src/App.scss
@@ -3,27 +3,9 @@
   background-color: rgb(61, 212, 161);
 }
 
-table {
-  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-  font-weight: bold;
-  text-align: left;
-  border-collapse: separate;
-  border-spacing: 5px;
-  padding: 0px;
-  background: #ECE9E0;
-  color: #656665;
-  border: 0px solid #ECE9E0;
-  border-radius: 20px;
-  }
-  th {
-  font-size: 18px;
-  padding: 10px;
-  }
-  td {
-  background: #F5D7BF;
-  padding: 10px;
-  // &:hover {
-  //   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
-  //   transform: translateY(-5px);
-  // }
+.cards {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
   }
