--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 }
 
 .wrapper {
-  background: #ffffff;
+  background: #169d4e;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   max-width: 1080px;
@@ -15,9 +15,13 @@
 }
 
 .header {
-  background: #ffffff;
+  background: #a54343;
   max-width: 1080px;
   padding: 0;
+  display:flex;
+  flex-direction: column;
+  align-items: center;  
+}
   
     h1 {
       font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
@@ -25,16 +29,6 @@
       margin: 10px auto;
       padding: 0;
     }
-}
-
-.cards {
-  background: #ffffff;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
-  border-radius: 20px;
-  max-width: 1080px;
-  margin: 10px auto;
-  
-}
 
 
 h3 {
