--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -13,26 +13,22 @@
         #hidden  {
             display: flex;
         }
+        
 
         button {
             display: none;
-            margin-left: 20px;
+            margin-left: 20px;          
         }
-
-       
         
         .links {
             max-height: 80px;
-            
             }
                 a {
                 text-decoration: none;
                 color: white;
                 font-size: 25px;
                 margin-left: 15px;
-        
                 }
-              
     }
 
     .rightSide{
@@ -49,19 +45,19 @@
 
     }
 
-    @media only screen and (max-width: 1550px) {
+    @media only screen and (max-width: 1650px) {
         .NavBar .leftSide .links a {
             font-size: 20px;
         }
     }
 
-    @media only screen and (max-width: 1300px) {
+    @media only screen and (max-width: 1400px) {
         .NavBar .leftSide .links a {
             font-size: 15px;
         }
     }
 
-    @media only screen and (max-width: 1000px) {
+    @media only screen and (max-width: 1110px) {
         .NavBar .leftSide button {
           display: flex;
           margin-left: 20px;
@@ -73,10 +69,18 @@
         .NavBar .leftSide #hidden {
             position: absolute;
             left: 0px;
-            top: 80px;
-            height: 230 px;
+            top: 104px;
+            max-height: 500px;
             width: 100%;
             background-color: #021E39;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+    }
+
+    .NavBar .leftSide #hidden a{
+    margin: 10px;
+    font-size: 25px;
 
     }
 }
